# sgm_aiwiki

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml
app/: config.py  main.py  mongo.py  old_llm.py  rag.py  test.py
app/templates/: chat.html  index.html
app/wiki/: Абагасское месторождение.txt  Абаканское месторождение.txt  Авзянское рудное поле.txt  Агинское месторождение (Камчатка).txt  Айдырлинское месторождение.txt  Ак-Сугское месторождение.txt  Акатуевское месторождение.txt  Аккермановское месторождение.txt  Алахинское месторождение.txt  Албазинское месторождение.txt  Александринское месторождение.txt  Александровское месторождение (Забайкалье).txt  Ампалыкское месторождение.txt  Амурское месторождение (цинковое).txt  Анзасское месторождение.txt  Аришинское месторождение.txt  Арсеньевское месторождение.txt  Астафьевское месторождение.txt  Ауникское месторождение.txt  Ахтенское месторождение.txt  Аяхтинское месторождение.txt  Баженовское месторождение.txt  Баимский рудный район.txt  Байкальское месторождение.txt  Бакчарское железорудное месторождение.txt  Бамское месторождение.txt  Бараньевское месторождение.txt  Баронское месторождение.txt  Барун-Холбинское месторождение.txt  Безречное месторождение.txt  Белкинское месторождение фосфоритов.txt  Белогорское месторождение (Приморье).txt  Белозиминское месторождение.txt  Белокитатское месторождение.txt  Белорецкое месторождение.txt  Белореченское месторождение (Восточный Саян).txt  Березитовое месторождение.txt  Березняковское месторождение.txt  (+588 more)
