[tool.poetry]
name = "sgm-aiwiki"
version = "0.1.0"
description = ""
authors = ["pikvic <truepikvic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
jinja2 = "^3.1.3"
python-dotenv = "^1.0.1"
uvicorn = "^0.29.0"
gigachain = "^0.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
